--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header class = "flex">
-            <img src="images/robot.jpg" alt="photo of a white plastic robot with
+            <img src="robot.jpg" alt="photo of a white plastic robot with
                 a black background">
             <h1>Raj's Robot Rentals</h1>
         </header>
